--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Унесенные ветром - Подарок</title>
+  <title>Унесенные ветром - Подарок V2</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap');
     body {
@@ -123,4 +123,5 @@
     }
   </script>
 </body>
+
 </html>
